# Photofant

./: .commit_msg.tmp  .gitignore  AGENTS.md  README.md  STATE.md  ci.cmd  install.cmd  install.sh  start.cmd  start.ps1  start.sh
backend/: pyproject.toml  settings.example.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_app_config.py  0002_galerie_mvp_schema.py  0003_reconcile_missing_marker.py  0004_model_registry.py  0005_tag_tables.py  0006_seed_caption_presets.py  0007_vector_index.py  0008_heuristics_done.py  0009_classified_flag.py  0010_florence_capabilities.py  0011_tag_corrections.py  0012_collections.py  0013_drop_app_config_to_settings_json.py  0014_phash_duplikaterkennung.py  0015_face_table.py  0016_face_vector_index.py  0017_face_review_columns.py  0018_version_table.py  0019_comfyui_workflow.py  0020_prompt_template.py  0021_seed_heavy_captioner_presets.py  0022_drop_comfyui_workflow.py  0023_asset_original_id_index.py  0024_collection_polish.py  0025_clip_distance_duale_duplikaterkennung.py  0026_person_group_name_created_at.py  0027_review_item_face_suggestion_uniqueness.py  0028_gallery_search_performance.py  0029_classification.py  0030_perf_person_tag_indexes.py  0031_drop_phash.py  0032_siglip2_dim_1024.py  0033_dinov2_vektorraum.py  0034_knowledge_cache.py  0035_knowledge_tasks.py  0036_recommendation_cache.py  0037_knowledge_changelog.py  0038_filter_column_indexes.py  0039_recommendation_target_index.py  0040_knowledge_attributes.py  (+4 more)
backend/photofant/: __init__.py  config.py  main.py  settings.py
backend/photofant/api/: __init__.py  assets.py  auth.py  caption_presets.py  classification.py  classify.py  collections.py  comfyui.py  config.py  duplicates.py  edit_sessions.py  export.py  faces.py  generative.py  health.py  info.py  jobs.py  knowledge.py  knowledge_ai.py  knowledge_tasks.py  maintenance.py  models.py  persons.py  prompt_templates.py  recommendations.py  review.py  review_queue.py  search.py  tags.py  trash.py
backend/photofant/classification/: engine.py  scoring.py  seed.py
backend/photofant/clustering/: cleanup.py  engine.py
backend/photofant/collections/: captions.py  engine.py  stats.py
backend/photofant/comfyui/: client.py  discovery.py  importer.py  introspect.py  validator.py
backend/photofant/db/: __init__.py  cache.py  embeddings.py  engine.py  face_vector_index.py  models.py  session.py  text_index.py  vector_index.py
backend/photofant/inference/: __init__.py  capabilities.py  caption_config.py  generative_engine.py  gguf_engine.py  image_embedder.py  interfaces.py  preprocessing.py  prompt_library.py  seedvr2_upscaler.py  session_manager.py  tools.py  web_search.py
backend/photofant/jobs/: __init__.py  backup_job.py  bulk_assign_person_job.py  bulk_edit_job.py  caption_job.py  captions_job.py  classification_job.py  classification_pipeline.py  clustering_job.py  collections_job.py  comfyui_run_job.py  download_job.py  dupe_scan_job.py  embedding_job.py  export_job.py  face_folder_scan_job.py  face_job.py  face_pipeline.py  flux_edit_job.py  heuristics_job.py  import_job.py  inpaint_job.py  install_generative_job.py  interview_job.py  knowledge_discovery_job.py  knowledge_import_job.py  knowledge_lookup_job.py  knowledge_patch_job.py  knowledge_update_job.py  queue.py  rebuild_job.py  recommendation_job.py  reconcile_job.py  reprocess_job.py  rerun_job.py  tagging_job.py  thumbnail_job.py  upscale_job.py
backend/photofant/knowledge/: AGENTS.md.template  __init__.py  changelog.py  domains.py  maintenance.py  parser.py  repository.py  schema.py  service.py  slug.py  task_rules.py  tasks.py  validator.py  vault.py
backend/photofant/maintenance/: reconcile.py  repair.py  store.py
backend/photofant/mcp/: __init__.py  adapter.py  gate.py  server.py
backend/photofant/media/: alpha_mask.py  asset_paths.py  atomic_io.py  meta.py  moves.py  ops.py  orientation_overwrite.py  person_folders.py  phash.py  thumbnails.py  versions.py
backend/photofant/models/: loader.py  (+3 more)
backend/tests/: conftest.py  test_assets_link_entity.py  test_assets_search.py  test_assets_total_count.py  test_atomic_io.py  test_capability_format_routing.py  test_caption_config.py  test_caption_presets_api.py  test_classification_api.py  test_classification_engine.py  test_classification_seed.py  test_collection_face_items.py  test_collections_engine.py  test_comfyui.py  test_comfyui_auto_import.py  test_comfyui_discovery.py  test_comfyui_import.py  test_comfyui_run.py  test_comfyui_workflow.py  test_dupe_scan_dino.py  test_faces_api.py  test_health.py  test_interview_job.py  test_job_queue_resize.py  test_knowledge_ai_autonomy.py  test_knowledge_ai_private_guard.py  test_knowledge_api.py  test_knowledge_attributes.py  test_knowledge_discovery_job.py  test_knowledge_domains.py  test_knowledge_lookup_job.py  test_knowledge_maintenance.py  test_knowledge_patch_job.py  test_knowledge_repository.py  test_knowledge_service.py  test_knowledge_slug.py  test_knowledge_tasks.py  test_knowledge_tasks_api.py  test_knowledge_update_job.py  test_knowledge_vault.py  (+17 more)
(+1138 files in other folders)
