[project]
name = "photofant-backend"
version = "0.1.0"
description = "Photofant — lokale Bildverwaltung, Backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "sse-starlette>=2.1",
    "pydantic>=2.10",
    "aiosqlite>=0.21",
    "Pillow>=10.0",
]

[project.optional-dependencies]
generative = [
    "torch",
    "diffusers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["photofant"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["SIM108"]  # code style: prefer if/else over ternary

[tool.mypy]
strict = true
python_version = "3.12"
files = ["photofant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
