[project]
name = "photofant-backend"
version = "0.1.0"
description = "Photofant — lokale Bildverwaltung, Backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "sse-starlette>=2.1",
    "pydantic>=2.10",
    "aiosqlite>=0.21",
    "Pillow>=10.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28",
    "huggingface_hub>=0.26",
    "onnxruntime-gpu>=1.20",
    "numpy>=1.26",
    "tokenizers>=0.20",
    "sqlite-vec>=0.1.9",
    "imagehash>=4.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
generative = [
    "torch>=2.4",
    "transformers>=4.44",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["photofant"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["SIM108"]  # code style: prefer if/else over ternary

[tool.mypy]
strict = true
python_version = "3.12"
files = ["photofant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]
