[project]
name = "photofant-backend"
version = "0.1.0"
description = "Photofant — lokale Bildverwaltung, Backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "sse-starlette>=2.1",
    "pydantic>=2.10",
    "aiosqlite>=0.21",
    "Pillow>=10.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28",
    "huggingface_hub>=0.26",
    "onnxruntime-gpu>=1.20",
    "numpy>=1.26",
    "tokenizers>=0.20",
    "sqlite-vec>=0.1.9",
    "scikit-learn>=1.3",
    "mcp>=1.2",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
generative = [
    "torch>=2.4",
    "transformers>=4.44",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
]
# 2. Inferenz-Runtime neben `generative` (ADR-029) — llama.cpp für GGUF-Gemma.
# `uv add` zieht per Default ein CPU-only-Wheel; für CUDA-Offload (Pflicht für ein
# 12B-Modell) das prebuilt-CUDA-Wheel des Projekts installieren, z.B.:
#   uv pip install llama-cpp-python --extra-index-url \
#     https://abetlen.github.io/llama-cpp-python/whl/cu121
# (Index/CUDA-Version an die lokale Treiber-Version anpassen — Plan B, falls das
# Default-Wheel beim Smoke-Test #1 CPU-only lädt.)
#
# Die CUDA-Wheels von llama-cpp-python (cu12x) linken zur Ladezeit gegen die
# CUDA-12-Runtime (cudart64_12.dll / cublas64_12.dll) — diese DLLs stecken NICHT
# im Wheel. Ohne torch (das sie sonst mitbrächte) fehlen sie, `ggml-cuda.dll`
# lädt nicht, und der Import scheitert still. Darum die Runtime als eigene
# Abhängigkeit mitziehen; `gguf_engine._register_cuda_runtime_dll_dirs()` hängt
# ihre bin-Ordner vor dem Import auf den DLL-Suchpfad. macOS hat kein CUDA →
# per Marker ausgeschlossen.
gemma-gguf = [
    "llama-cpp-python>=0.3",
    "nvidia-cuda-runtime-cu12; platform_system != 'Darwin'",
    "nvidia-cublas-cu12; platform_system != 'Darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["photofant"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["SIM108"]  # code style: prefer if/else over ternary

[tool.mypy]
strict = true
python_version = "3.12"
files = ["photofant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "types-pyyaml>=6.0.12.20260518",
]
